--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Theme for commercetools Sunrise online shop",
   "repository": {
     "type": "git",
-    "url": "git://github.com/commercetools/commercetools-sunrise-theme.git"
+    "url": "https://github.com/haunguyenlxag/haunguyenlxag.github.io.git"
   },
   "config": {
     "github": {
-      "username": "automation-commercetools",
-      "email": "automation@commercetools.de",
-      "repoSlug": "commercetools/commercetools-sunrise-theme"
+      "username": "haunguyenlxag",
+      "email": "hau.nguyen@merkle.com",
+      "repoSlug": "haunguyenlxag/haunguyenlxag.github.io"
     },
     "maven": {
       "groupId": "com.commercetools.sunrise",
@@ -19,9 +19,9 @@
     }
   },
   "bugs": {
-    "url": "https://github.com/commercetools/commercetools-sunrise-theme/issues"
+    "url": "https://github.com/haunguyenlxag/haunguyenlxag.github.io/issues"
   },
-  "homepage": "https://github.com/commercetools/commercetools-sunrise-theme#readme",
+  "homepage": "https://github.com/haunguyenlxag/haunguyenlxag.github.io#readme",
   "keywords": [
     "Sunrise",
     "commercetools",
@@ -52,6 +52,6 @@
     "i18next.yaml": "^1.6.0",
     "json-refs": "^2.0.3",
     "load-grunt-tasks": "^3.4.0",
-    "node-sass": "^3.4.2"
+    "node-sass": "npm:sass@^1.30.0"
   }
 }
